# cminpack

./: CMakeLists.txt  README.md  chkder.c  chkder_.c  cminpack.h  covar.c  covar1.c  covar_.c  dogleg.c  dogleg_.c  dpmpar.c  dpmpar_.c  enorm.c  enorm_.c  fdjac1.c  fdjac1_.c  fdjac2.c  fdjac2_.c  hybrd.c  hybrd1.c  hybrd1_.c  hybrd_.c  hybrj.c  hybrj1.c  hybrj1_.c  hybrj_.c  lmder.c  lmder1.c  lmder1_.c  lmder_.c  lmdif.c  lmdif1.c  lmdif1_.c  lmdif_.c  lmpar.c  lmpar_.c  lmstr.c  lmstr1.c  lmstr1_.c  lmstr_.c  (+12 more)
doc/: MINPACK HYBRD.txt  MINPACK HYBRD1.txt  MINPACK HYBRJ.txt  MINPACK HYBRJ1.txt  MINPACK LMDER.txt  MINPACK LMDER1.txt
examples/: fcn.mpl  tchkder.f  thybrd.f  thybrd1.f  thybrj.f  thybrj1.f  tlmder.f  tlmder1.f  tlmdif.f  tlmdif1.f  tlmstr.f  tlmstr1.f
matlab/: CMakeLists.txt  cminpack.m  cminpackMex.cpp  test_cminpack.m
